--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.2",
+    "leaflet": "^1.9.4",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
