--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.2",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "next": "14.1.0",
     "react": "^18",
